Linea de comandos y notificaciones